include the template generating json-schema from metamodels

--- a/laplacian-module.yml
+++ b/laplacian-module.yml
@@ -8,6 +8,8 @@ templates:
   subname: kotlin
   version: "1.0.0"
 - group: laplacian
-  name: json-schema
+  name: entity
+  subname: json-schema
   version: "1.0.0"
+
 
