--- a/src/main/resources/laplacian/metamodel/entity.yml
+++ b/src/main/resources/laplacian/metamodel/entity.yml
@@ -18,11 +18,11 @@ entities:
               inheritedFrom.first().referenceEntity.namespace
           }
           else {
-              _model.retrieve("project.namespace") ?: throw IllegalStateException(
+              _context.get("project.namespace") ?: throw IllegalStateException(
                   "The ${name} entity does not have namespace." +
                   "You should give it or set the default(project) namespace instead."
               )
-          }
+          } as String
 
       - name: identifier
         description: >
