--- a/laplacian-module.yml
+++ b/laplacian-module.yml
@@ -1,5 +1,6 @@
-group: laplacian
-type: model
-name: metamodel
-version: "1.0.0"
+project:
+  group: laplacian
+  type: model
+  name: metamodel
+  version: "1.0.0"
 
