--- a/src/main/resources/laplacian/model/metamodel/named_param.yml
+++ b/src/main/resources/laplacian/model/metamodel/named_param.yml
@@ -1,7 +1,7 @@
 entities:
   - name: named_param
     value_object: true
-    namespace: laplacian.model.metamodel
+    namespace: laplacian.metamodel
     properties:
       - name: name
         type: string
