--- a/src/main/resources/laplacian/model/metamodel/value_domain_type.yml
+++ b/src/main/resources/laplacian/model/metamodel/value_domain_type.yml
@@ -1,6 +1,6 @@
 value_domain_types:
   - name: identifier
-    namespace: laplacian.model.metamodel
+    namespace: laplacian.metamodel
     description: 主要言語で識別子として使用可能な文字列
     type: string
     domain:
@@ -8,7 +8,7 @@ value_domain_types:
         [_$a-zA-Z][_$a-zA-Z0-9]*
 
   - name: namespace
-    namespace: laplacian.model.metamodel
+    namespace: laplacian.metamodel
     description: 名前空間
     type: string
     domain:
@@ -16,7 +16,7 @@ value_domain_types:
         [_a-zA-Z][_$a-zA-Z0-9]*(\.[_a-zA-Z][_$a-zA-Z0-9]*)*
 
   - name: base_type
-    namespace: laplacian.model.metamodel
+    namespace: laplacian.metamodel
     description: 基本型
     type: string
     domain:
