--- a/laplacian-module.yml
+++ b/laplacian-module.yml
@@ -3,6 +3,9 @@ project:
   type: model
   name: metamodel
   version: "1.0.0"
+  description: |
+    This model expresses the structure of models. In other words, this model explains
+    how to define "a model".
   plugins:
   - group: laplacian
     name: metamodel
@@ -11,4 +14,8 @@ project:
   - group: laplacian
     name: entity
     subname: json-schema
+    version: "1.0.0"
+  - group: laplacian
+    name: entity
+    subname: diagram
     version: "1.0.0"
