update the description

--- a/laplacian-module.yml
+++ b/laplacian-module.yml
@@ -4,21 +4,25 @@ project:
   name: metamodel
   version: "1.0.0"
   description: |
-    This model expresses the structure of models. In other words, this model explains
-    how to define "a model".
+    A model that expresses the structure of relational model with aggregation support.
+    This model is used to define models from which templates generate resources.
+
   models:
   - group: laplacian
     name: metamodel
     version: "1.0.0"
+
   templates:
   - group: laplacian
     name: entity
     subname: kotlin
     version: "1.0.0"
+
   - group: laplacian
     name: entity
     subname: json-schema
     version: "1.0.0"
+
   - group: laplacian
     name: entity
     subname: diagram
