--- a/model/metamodel/entity.yml
+++ b/model/metamodel/entity.yml
@@ -11,6 +11,7 @@ entities:
       - name: namespace
         description: 名前空間
         type: string
+        primary_key: true
         domain_type_name: namespace
         optional: true
         default_value: |
@@ -55,15 +56,25 @@ entities:
           identifier.upperCamelize()
 
       - name: subtype_of
-        description: The name of the entity which this entity is subtype of
+        description: |
+          The name of the entity which this entity is subtype of
         type: string
         optional: true
+
+      - name: subtype_key_value
+        type: string
+        optional: true
+        description: |
+          The value of subtype key that represents this type of entity,
+          which is used when implementing polymorphism. The name of entity is used by default.
+        default_value: |
+          name
 
       - name: inherited
         description: >
           他のエンティティの導出エンティティであるかどうか
         type: boolean
-        snippet: >
+        snippet: |
           supertype?.inherited ?: relationships.any{ it.inherited }
 
       - name: top_level
@@ -144,6 +155,13 @@ entities:
         - from: name
           to: subtype_of
 
+      - name: subtype_key
+        description: The property which is used to identify the type of a entity.
+        reference_entity_name: property
+        cardinality: '0..1'
+        snippet:
+          properties.find{ it.subtypeKey }
+
       - name: queries
         description: このエンティティに対するルートクエリ
         reference_entity_name: query
@@ -155,7 +173,7 @@ entities:
         reference_entity_name: property
         cardinality: '1..*'
         snippet: |
-          properties.filter{ it.primaryKey }
+          (supertype?.primaryKeys ?: emptyList()) + properties.filter{ it.primaryKey }
 
       - name: inherited_from
         description: >
@@ -164,7 +182,7 @@ entities:
         reference_entity_name: relationship
         cardinality: '*'
         snippet: >
-          allRelationships.filter{ it.inherited }
+          supertype?.inheritedFrom ?: relationships.filter{ it.inherited }
 
       - name: relating_entities
         description: |
