--- a/laplacian-module.yml
+++ b/laplacian-module.yml
@@ -27,3 +27,8 @@ project:
     name: entity
     subname: document
     version: "1.0.0"
+
+  - group: laplacian
+    name: entity
+    subname: spec-junit5
+    version: "1.0.0"
