--- a/model/metamodel/entity.yml
+++ b/model/metamodel/entity.yml
@@ -125,6 +125,8 @@ entities:
     type: boolean
     snippet: >
       !inherited && !valueObject
+    example_values:
+    - true
 
   - name: supports_namespace
     description: >
@@ -134,6 +136,8 @@ entities:
       properties.any { p ->
           p.name == "namespace" && p.type == "string"
       }
+    example_values:
+    - false
 
   - name: fqn
     description: >
@@ -141,6 +145,9 @@ entities:
     type: string
     snippet: |
       "$namespace.$className"
+    example_values:
+    - example.party.Party
+    - example.party.Person
 
   - name: primary_key_names
     description: |
@@ -153,12 +160,16 @@ entities:
               "${inheritance.identifier.lowerUnderscorize()}_${pk.propertyName.lowerUnderscorize()}"
           }
       } + primaryKeys.map { it.propertyName.lowerUnderscorize() }
+    example_values:
+    - ["party_id"]
 
   - name: deprecated
     type: boolean
     optional: true
     default_value: |
       false
+    example_values:
+    - false
 
   - name: examples
     description:
